// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conventional-changelog-beemo doesnt replace @username if wrapped in backticks 1`] = `
"### 1.0.0 - 2019-02-26

#### 📦 Dependencies

- Updated \`@types\` packages. ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo handles merge commits 1`] = `
"### 1.0.0 - 2019-02-26

#### 🐞 Fixes

- use yarn ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo handles multiple notes 1`] = `
"# 1.0.0 - 2019-02-26

Button is more buttony

Made a lot of changes

#### 🎉 Release

- Initial release ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 🐞 Fixes

- **[button]** Made button changes ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo handles revert type 1`] = `
"### 1.0.0 - 2019-02-26

#### ↩️ Reverts

- **[foo]** undo this ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo only replaces with link to user if it is an username 1`] = `
"### 1.0.0 - 2019-02-26

#### 🐞 Fixes

- use npm@5 ([@username](https://github.com/username)) ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 🛠 Internals

- **[deps]** bump @dummy/package from 7.1.2 to 8.0.0 ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo replaces #[0-9]+ with issue URL 1`] = `
"## 1.0.0 - 2019-02-26

#### 🚀 Updates

- **[awesome]** fix #88 ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d)), closes [#88](https://github.com/beemojs/conventional-changelog-beemo/issues/88)"
`;

exports[`conventional-changelog-beemo replaces @username with GitHub user URL 1`] = `
"## 1.0.0 - 2019-02-26

#### 🚀 Updates

- **[awesome]** issue brought up by [@bcoe](https://github.com/bcoe)! on Friday ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo supports all types at once 1`] = `
"# 1.0.0 - 2019-02-26

New build system.

They are easier now!

#### 🎉 Release

- New major! ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 💥 Breaking

- Forms have changed ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 🚀 Updates

- amazing new module ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))
- **[core]** settings refactor ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))
- **[modal, button]** added accessibility ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d)), closes [#1](https://github.com/beemojs/conventional-changelog-beemo/issues/1) [#2](https://github.com/beemojs/conventional-changelog-beemo/issues/2)

#### 🐞 Fixes

- updated i18n ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))
- **[router]** Fix params ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 🔑 Security

- **[auth]** improved logic ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d)), closes [#3](https://github.com/beemojs/conventional-changelog-beemo/issues/3)

#### ⚙️ Types

- Removed any ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 🎨 Styles

- **[button]** polished rounded corners ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 📘 Docs

- added getting started ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 📦 Dependencies

- **[babel,jest]** Bumped to latest ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 🛠 Internals

- **[deps]** updated dev tools ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))
- **[travis]** fixed yaml config ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))
- setup testing framework ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))
- **[ts]** updated types ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo supports non public GitHub repository locations 1`] = `
"## 3.0.0 - 2019-02-26

#### 🚀 Updates

- **[events]** implementing #5 by [@dlmr](https://github.internal.example.com/dlmr) ([a1b2c3d](https://github.internal.example.com/conventional-changelog/internal/commit/a1b2c3d)), closes [#5](https://github.internal.example.com/conventional-changelog/internal/issues/5) [#10](https://github.internal.example.com/conventional-changelog/internal/issues/10)
- why this work? ([a1b2c3d](https://github.internal.example.com/conventional-changelog/internal/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo uses h1 for major versions 1`] = `
"# 1.0.0 - 2019-02-26

#### 🎉 Release

- new stuff ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 💥 Breaking

- new shit ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 🐞 Fixes

- just a patch ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo uses h2 for minor versions 1`] = `
"## 1.0.0 - 2019-02-26

#### 🚀 Updates

- new shit ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))
- new stuff ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))
- **[modal]** better modals ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 🐞 Fixes

- just a patch ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo uses h3 for patch versions 1`] = `
"### 1.0.0 - 2019-02-26

#### 🐞 Fixes

- just a patch ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 📘 Docs

- add a manual ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo works if there is a semver tag 1`] = `
"## 1.0.0 - 2019-02-26

#### 🚀 Updates

- some more features ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo works if there is no semver tag 1`] = `
"## 1.0.0 - 2019-02-26

New build system.

#### 🚀 Updates

- amazing new module ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))
- **[ngOptions]** make it faster ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d)), closes [#1](https://github.com/beemojs/conventional-changelog-beemo/issues/1) [#2](https://github.com/beemojs/conventional-changelog-beemo/issues/2)

#### 🐞 Fixes

- **[compile]** avoid a bug ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### ↩️ Reverts

- **[ngOptions]** bad commit ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))

#### 🛠 Internals

- first build setup ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))
- **[travis]** add TravisCI pipeline ([a1b2c3d](https://github.com/beemojs/conventional-changelog-beemo/commit/a1b2c3d))"
`;

exports[`conventional-changelog-beemo works with unknown host 1`] = `
"### 1.0.0 - 2019-02-26

#### 📘 Docs

- add manual ([a1b2c3d](commits/a1b2c3d))"
`;
